--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -13,7 +13,11 @@
     "axios": "^1.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.49.3",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
+    "react-player": "^2.14.1",
     "react-router-dom": "^6.21.1"
   },
   "devDependencies": {
